# spaceship-sim

./: CMakeLists.txt
dependencies/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
